<resources>
    <string name="app_name">Gecg</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="image">image</string>
    <string name="organizer">Organizer</string>
    <string name="event_name">Event Name</string>
    <string name="organizer_contact">Organizer Contact</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="description">Description</string>
    <string name="faculty_cordinator">Faculty Cordinator</string>
    <string name="faculty_cordinator_conatct">Faculty Cordinator Conatct</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="dateList">Date :</string>
    <string name="upload">Upload</string>
    <string name="timing">Timing :</string>
    <string name="placed_at">Placed at :</string>
    <string name="name">Name</string>
    <string name="organized_by">Organized By :</string>
    <string name="date2">Date :</string>
    <string name="goverment_engineering_colllege">Goverment Engineering Colllege</string>
    <string name="gandhinagar">Gandhinagar</string>
    <string name="cordinator_faculty">Cordinator Faculty</string>
    <string name="textview">TextView</string>
    <string name="phone">Phone :</string>
    <string name="actname">actNAme</string>
    <string name="actdestname">actDestNAme</string>

</resources>
