<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.dhaval.gecg.ActivityDetails">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardElevation="0dp">

            <ImageView
                android:id="@+id/actImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/ic_launcher_background"
                android:contentDescription="@string/todo" />
        </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="3dp"
            android:layout_marginTop="5dp"
            app:srcCompat="@drawable/ic_blacklogo"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/ic_destination_flag"
            tools:ignore="VectorDrawableCompat"
            android:contentDescription="@string/todo" />


        <TextView
            android:id="@+id/actDestName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="50dp"
            android:text="@string/actdestname"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/actName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|left"
            android:layout_marginStart="50dp"
            android:layout_marginTop="10dp"
            android:gravity="top|left"
            android:text="@string/actname"
            android:textSize="20sp"
            tools:ignore="RtlHardcoded" />
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_perm_contact_calendar_black_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/actDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    app:layout_constraintDimensionRatio="w,"
                    app:layout_constraintTop_toBottomOf="@+id/overview" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="5dp"
                    android:src="@drawable/ic_access_time_black_24dp"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:id="@+id/actTiming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/textview"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@+id/actDate" />
            </LinearLayout>

            <com.borjabravo.readmoretextview.ReadMoreTextView
                android:id="@+id/readmore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="8sp"
                android:text="Description dfbbahsfgb sfb ha ghsaf ahgfhasgfssa fjhasffgha gfaf"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="16sp"
                android:typeface="normal"
                app:colorClickableText="#FF1911AA"
                app:layout_constraintTop_toBottomOf="@+id/actTiming"
                app:trimCollapsedText="Read less"
                app:trimExpandedText="Read more"
                app:trimLength="20"
                app:trimMode="trimModeLength" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/organizer"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="730dp"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/actOrgName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/textview"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/actOrgContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        card_view:cardBackgroundColor="@android:color/transparent"
        card_view:cardElevation="0dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="8dp"
            android:gravity="left"
            android:text="@string/cordinator_faculty"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="35dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteY="730dp"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/actCordFac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/textview"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/actCordFacContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/textview" />
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</ScrollView>
